# newbbs

./: Cargo.toml  LICENSE  README.md
config/: default.toml  dev.toml  prod.toml
src/: lib.rs  main.rs  settings.rs
src/base/: resp.rs
src/configure/: settings.rs
src/controller/: health_controller.rs  mod.rs  post_controller.rs  user_controller.rs
src/db/: mod.rs
src/domain/: mod.rs
src/domain/dto/: mod.rs
src/domain/entity/: mod.rs
src/service/: mod.rs  post_service.rs
