[package]
name = "newbbs"
version = "0.1.0"
authors = ["yanfenglee <muxsdt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
serde_derive = "1"
serde = "1"

diesel = { version = "1.4.4", features = ["mysql"] }