[package]
name = "newbbs"
version = "0.1.0"
authors = ["yanfenglee <muxsdt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# config
config = "0.11"

# runtime
tokio = { version = "1.4", features = ["full"] }

# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# database
rbatis = { version = "1.8.81", default-features = false, features = ["mysql","tokio1"] }
#rbatis-macro-driver = { version = "1.8" }

# time
chrono = { version = "0.4", features = ["serde"] }

# static
lazy_static = "1.4.0"

# futures
futures = "0.3"

# web server
actix-web = "3.3"
actix-http = "2.2"

# redis
redis = {version = "0.20", features = ["async-std-comp"] }

# log
log = "0.4.0"
env_logger = "0.8.3"